@@ -1,2 +1,4 @@
 # Only project- and language-specific ignores in here. Use global .gitignore for editors etc
-# Nothing in here yet
+
+# Vagrant
+.vagrant/
