@@ -1,0 +1,4 @@
+#!/bin/bash
+set -e
+
+echo "Not yet implemented, see https://github.com/snowplow/snowplow/issues/1267"
