@@ -1,0 +1,6 @@
+oss-playbooks/ruby-rvm.yml
+oss-playbooks/java7.yml
+oss-playbooks/thrift.yml
+oss-playbooks/scala.yml
+oss-playbooks/sbt.yml
+oss-playbooks/leiningen.yml
